[gd_scene load_steps=4 format=2]

[ext_resource path="res://TESTS/PlayGround.gd" type="Script" id=1]
[ext_resource path="res://Tasks/GetSteel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tasks/GetWood.tscn" type="PackedScene" id=3]

[node name="PlayGround" type="Node"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0

[node name="Button" type="Button" parent="Control"]
margin_left = 409.0
margin_top = 67.0
margin_right = 579.0
margin_bottom = 129.0
text = "Save"

[node name="Button2" type="Button" parent="Control"]
margin_left = 627.0
margin_top = 67.0
margin_right = 797.0
margin_bottom = 129.0
text = "Load"

[node name="Button3" type="Button" parent="Control"]
margin_left = 411.0
margin_top = 150.0
margin_right = 581.0
margin_bottom = 212.0
text = "print"

[node name="Button4" type="Button" parent="Control"]
margin_left = 626.0
margin_top = 152.0
margin_right = 796.0
margin_bottom = 214.0
text = "Change name"

[node name="HSlider" type="HSlider" parent="Control"]
margin_left = 139.0
margin_top = 216.0
margin_right = 350.0
margin_bottom = 232.0
min_value = 10.0
max_value = 60.0
step = 10.0
value = 10.0
tick_count = 6
ticks_on_borders = true

[node name="GetWood" parent="Control" instance=ExtResource( 3 )]
position = Vector2( 274, 488 )
base_reward = 6

[node name="GetSteel" parent="Control" instance=ExtResource( 2 )]
position = Vector2( 564, 351 )

[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/Button4" to="." method="_on_Button4_pressed"]
